mobile alignment fixess

--- a/src/app/learner/pages/ask-questions/ask-questions.component.scss
+++ b/src/app/learner/pages/ask-questions/ask-questions.component.scss
@@ -77,6 +77,12 @@
 .ml-30px {
   margin-left: 30px;
 }
+.mr-20px {
+  margin-right: 20px;
+}
+.mr-30px {
+  margin-right: 30px;
+}
 .mt-10px {
   margin-top: 10px;
 }
@@ -165,7 +171,7 @@
 }
 .sel-pad {
   padding: 2px;
-  max-width: 55% !important ;
+  max-width: 100% !important ;
 }
 .sel-pad-modal {
   padding: 2px;
